# kishara-llm

./: .gitignore  README.md  docker-compose.yml
script/: Dockerfile  Dockerfile-base  build.py
server/: README.md  config.py  main.py  pyproject.toml  start.py
server/factories/: model_factory.py
server/inference/llm/: generator.py
server/inference/prompts/: llm_prompts.py
server/models/: dtos.py  llm.py  models.py
server/routers/: qa.py
